kubernetes/manifests/simpleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-svc
  namespace: prova
spec:
  type: ClusterIP
  ports:
    - port: 8008
      #targetPort: 8008
      #nodePort: 30000
  selector:
    app: simpleapp
